fix: keep the javadoc of the invoker types resolvable after the move
Their javadoc links the entry point they are called through, which
resolved while they sat in the same package as it. The import they need
for that is back, so the javadoc build has something to resolve again.

An argument being allowed to be null is also pinned where it is decided:
one case for a call keeping it and handing it to the implementation, the
way focusing without options does.